# rust-foo-movie-creator

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
src/: App.vue  main.ts  router.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  ffmpeg.rs  lib.rs  main.rs
src/assets/: main.css
src/stores/: app.ts
src/utils/: rng.ts
src/views/: Configuration.vue  Screensaver.vue
